--- a/github-repos-cards.html
+++ b/github-repos-cards.html
@@ -1,11 +1,14 @@
 <link rel="import" href="../polymer/polymer.html">
 
 <link rel="import" href="../polymer-jsonp/polymer-jsonp.html">
-<link rel="import" href="../paper-shadow/paper-shadow.html">
-<link rel="import" href="../core-icons/core-icons.html">
+
+<link rel="import" href="github-repo-card.html">
 
 <!--
-A Polymer web component that fetches public git repository data from Github. The data is fetched using the Github API v3.
+A Polymer web component that displays git repository data from Github. A JSONP request is made for the provided
+request. This element was created to be used with Github's API, and expects a response in the form of Github's API v3.
+The response object is exposed via data binding, which can be used to set the object or to use the object outside of
+this element, see the demo for an example.
 
 ##### Example
 
@@ -18,7 +21,7 @@ A Polymer web component that fetches public git repository data from Github. The
 @homepage http://vanxrice.github.io/github-repos-cards
 @demo http://vanxrice.github.io/github-repos-cards/demo.html
 -->
-<polymer-element name="github-repos-cards" attributes="request">
+<polymer-element name="github-repos-cards" attributes="request response">
   <template is="auto binding">
     <link rel="stylesheet" href="github-repos-cards.css">
 
@@ -28,28 +31,9 @@ A Polymer web component that fetches public git repository data from Github. The
       on-polymer-response="{{onResponse}}">
     </polymer-jsonp>
 
-    <div vertical layout center start>
-      <template bind="{{response.data[0].owner as owner}}">
-        <a href="{{owner.html_url}}">{{owner.login}}</a href="{{owner.html_url}}">
-        <div horizontal center layout>
-          <p>{{sumStars()}}</p>
-          <core-icon icon="star" style="width: 20px; height: 20px;"></core-icon>
-        </div>
-      </template>
-    </div>
-
     <div horizontal layout wrap around-justified>
       <template repeat="{{response.data as repository}}">
-        <paper-shadow z="2" class="card">
-          <div class="head" horizontal layout>
-            <span flex>{{repository.name}}</span>
-            <div horizontal center layout>
-              <p>{{repository.stargazers_count}}</p>
-              <core-icon icon="star" style="width: 20px; height: 20px;"></core-icon>
-            </div>
-
-          </div>
-        </paper-shadow>
+        <github-repo-card repository="{{repository}}"></github-repo-card>
       </template>
     </div>
 
@@ -70,26 +54,22 @@ A Polymer web component that fetches public git repository data from Github. The
        */
       request: 'https://api.github.com/users/octocat/repos?',
 
+      /**
+       * The `response` attribute is bound to the response object from the JSONP request. The can be used 
+       * to create additional elements.
+       *
+       * See Github's documentation for more information, https://developer.github.com/v3/repos/.
+       *
+       * @attribute response
+       * @type string
+       * @default null
+       */
+      response: null,
+
       ready: function () {
-        // Ready is a lifecycle callback.
-        // You can do setup work in here.
-        // More info: http://www.polymer-project.org/docs/polymer/polymer.html#lifecyclemethods
-        console.log('ready');
       },
 
       onResponse: function (e) {
-        console.log(this.response);
-      },
-
-      sumStars: function() {
-        var total = 0;
-        if (this.response && this.response.data) {
-          console.log(this.response.data);
-          this.response.data.forEach(function(repo) {
-            total += repo.stargazers_count;
-          });
-        }
-        return total;
       }
     });
   </script>
