--- a/github-repos-cards.html
+++ b/github-repos-cards.html
@@ -5,21 +5,22 @@
 <link rel="import" href="github-repo-card.html">
 
 <!--
-A Polymer web component that displays git repository data from Github. A JSONP request is made for the provided
-request. This element was created to be used with Github's API, and expects a response in the form of Github's API v3.
-The response object is exposed via data binding, which can be used to set the object or to use the object outside of
-this element, see the demo for an example.
+A Polymer web component that displays git repository data from Github. This element was created to be used with Github's
+API, and expects a response in the form of Github's API v3. The response object is exposed via data binding, which can be
+used to set the object or to use the object outside of this element, see the demo for an example. A JSONP request is made for
+the provided request string. 
 
 ##### Example
 
-    <github-repos-cards request="https://api.github.com/users/vanxrice/repos?type=owner&sort=updated&direction=desc">
+    <github-repos-cards maxRepoCount="5" response="{{ghResponse}}"
+      request="https://api.github.com/users/vanxrice/repos?type=owner&sort=updated&direction=desc">
     </github-repos-cards>
 
 @element github-repos-cards
 @blurb A Polymer web component that fetches public git repository data from Github.
-@status alpha
-@homepage http://vanxrice.github.io/github-repos-cards
-@demo http://vanxrice.github.io/github-repos-cards/demo.html
+@status beta
+@homepage http://vanxrice.github.io/github-repos-cards/components/github-repos-cards
+@demo http://vanxrice.github.io/github-repos-cards/components/github-repos-cards/demo.html
 -->
 <polymer-element name="github-repos-cards" attributes="request response maxRepoCount">
   <template is="auto binding">
