--- a/github-repo-card.html
+++ b/github-repo-card.html
@@ -17,8 +17,8 @@ A Polymer element that displays a Github repository object in a card
 @element github-repo-card
 @blurb A Polymer element that displays a Github repository object in a card
 @status alpha
-@homepage http://vanxrice.github.io/github-repos-cards
-@demo http://vanxrice.github.io/github-repos-cards/demo.html
+@homepage http://vanxrice.github.io/github-repos-cards/components/github-repos-cards
+@demo http://vanxrice.github.io/github-repos-cards/components/github-repos-cards/demo.html
 -->
 <polymer-element name="github-repo-card" attributes="repository">
   <template is="auto binding">
