--- a/github-repos-cards.html
+++ b/github-repos-cards.html
@@ -5,10 +5,11 @@
 <link rel="import" href="github-repo-card.html">
 
 <!--
-A Polymer web component that displays git repository data from Github. This element was created to be used with Github's
-API, and expects a response in the form of Github's API v3. The response object is exposed via data binding, which can be
-used to set the object or to use the object outside of this element, see the demo for an example. A JSONP request is made for
-the provided request string. 
+A Polymer web component that displays git repository data as a grid collection of cards. The &lt;github-repo-card&gt; displays basic repo information, including: stargazer/watcher count, repo description, a link to the README, default branch and last commit time, and includes a download link. &lt;github-repo-card&gt; is the standalone card, it does not make any request and may be used without &lt;github-repos-cards&gt;. This project intentionally does not define much styling (CSS or otherwise), you should style these elements in your application so they integrate well.
+
+This element was intended to be used with Github's API, and expects a response in the form of Github's API v3. However requests are not restricted to Github, a JSONP request is made for the provided request string - this allows you to use a different REST API.
+
+The response object is exposed as `response`, this can be used to manually set the model or to use the request outside of this element. See the demo for an example that sums stargazers.
 
 ##### Example
 
